<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightCoffee"
    tools:context=".ui.home.fragments.FavFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:fontFamily="cursive"
            android:text="@string/lista_de_favoritos"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/darkCoffee"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/dividerTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTitle"
            app:layout_constraintTop_toTopOf="@+id/tvTitle"
            app:tint="@color/darkCoffee" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dividerTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/constraintAppbar"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/book_list_item" />

    <LinearLayout
        android:id="@+id/lnErrorInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvTitleError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text="No tienes favoritos"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/darkCoffee"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvTitleErrorDesp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text="Regresa a la pantalla de inicio para agregar favoritos"
            android:textAlignment="center"
            android:textColor="@color/darkCoffee"
            android:textSize="20sp" />


    </LinearLayout>

</RelativeLayout>