<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightCoffee"
    tools:context=".ui.home.fragments.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:fontFamily="cursive"
            android:text="@string/ingresa_un_libro_a_buscar"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/darkCoffee"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/searchTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvFilterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="cursive"
            android:text="Buscar por:"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/darkCoffee"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/searchTextField"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/searchTextField" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/ChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toTopOf="@+id/searchTextField"
            app:layout_constraintStart_toEndOf="@+id/tvFilterTitle"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_1"
                style="@style/CustomChipChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/titulo"
                app:chipStrokeColor="@color/gray50"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_2"
                style="@style/CustomChipChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/autor"
                app:chipStrokeColor="@color/gray50"
                app:chipStrokeWidth="1dp" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/blue"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:hintTextColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fbSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchEditText"
                style="@style/LearnEditTextStyleRound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textSize="12sp" />

            <requestFocus />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/margin_default"
            android:src="@drawable/ic_search"
            app:backgroundTint="@color/white"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/searchTextField"
            app:layout_constraintTop_toTopOf="@+id/searchTextField"
            tools:ignore="ContentDescription" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="cursive"
            android:text="Mis favoritos"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/darkCoffee"
            android:textSize="15dp"
            app:icon="@drawable/ic_favorite"
            app:iconSize="15dp"
            app:iconTint="@color/darkCoffee"
            app:layout_constraintEnd_toEndOf="@+id/searchTextField"
            app:layout_constraintStart_toStartOf="@+id/searchTextField"
            app:layout_constraintTop_toBottomOf="@+id/searchTextField" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/constraintSearch"
        android:layout_marginTop="5dp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerListTickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        tools:listitem="@layout/book_list_item" />


    <RelativeLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@color/colorWhite80"
        android:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />
    </RelativeLayout>


</RelativeLayout>