<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="@dimen/margin_default">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fbAddFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite"
                app:backgroundTint="@color/white"
                app:fabSize="mini"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/red" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fbDeleteFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete"
                android:visibility="visible"
                app:backgroundTint="@color/white"
                app:fabSize="mini"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/darkCoffee" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="cursive"
                android:maxEms="15"
                android:padding="10dp"
                android:text="Descripción"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/darkCoffee"
                android:textSize="25dp"
                app:layout_constraintBottom_toTopOf="@+id/tvSubtitle"
                app:layout_constraintEnd_toStartOf="@+id/fbAddFav"
                app:layout_constraintStart_toEndOf="@+id/fbDeleteFav"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/dividerTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/tvSubtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:maxEms="12"
                android:padding="10dp"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/darkCoffee"
                android:textSize="15dp"
                app:layout_constraintBottom_toTopOf="@+id/imgBook"
                app:layout_constraintEnd_toStartOf="@+id/fbAddFav"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                tools:text="Blanca Nieves ve la luz el coronel no tiene quien le escriba" />

            <ImageView
                android:id="@+id/imgBook"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toTopOf="@+id/lnMoreInfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/dividerMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/lnMoreInfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgBook" />

            <LinearLayout
                android:id="@+id/lnMoreInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgBook">

                <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_default"
                    android:layout_marginTop="10dp"
                    android:textAlignment="viewStart"
                    tools:text="Autor: Gabriel García Márquez" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_default"
                    android:layout_marginTop="5dp"
                    android:textAlignment="viewStart"
                    tools:text="Fecha publicación: 2022-05-22" />

                <TextView
                    android:id="@+id/tvPagNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_default"
                    android:layout_marginTop="5dp"
                    android:textAlignment="viewStart"
                    tools:text="Numero de paginas: 22" />

                <TextView
                    android:id="@+id/tvContributors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_default"
                    android:layout_marginTop="5dp"
                    android:textAlignment="viewStart"
                    tools:text="Colaboradores: Juanito de tal, Julanito de tal, No se quien no se quein mas" />

                <TextView
                    android:id="@+id/tvPublishPlaces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_default"
                    android:layout_marginTop="5dp"
                    android:textAlignment="viewStart"
                    tools:text="Lugares de publicación: Colombia, España, USA" />

                <TextView
                    android:id="@+id/tvPublisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_default"
                    android:layout_marginTop="5dp"
                    android:textAlignment="viewStart"
                    tools:text="Editoriales: " />

                <TextView
                    android:id="@+id/tvIsbn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_default"
                    android:layout_marginTop="5dp"
                    android:textAlignment="viewStart"
                    tools:text="ISBN: 1231231" />

                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_default"
                    android:layout_marginTop="5dp"
                    android:textAlignment="viewStart"
                    tools:text="Lenguajes: esp, ing, al" />

                <TextView
                    android:id="@+id/tvPersons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_default"
                    android:layout_marginTop="5dp"
                    android:textAlignment="viewStart"
                    tools:text="Personajes: " />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>