...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardBook"
        app:cardBackgroundColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
...
                android:id="@+id/imgBook"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toTopOf="@+id/tvSubtitleDesp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


            <TextView
...
